TRAVIS: first attempt to just build wlcsim.exe

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 # After changing this file, check it on:
 #   http://lint.travis-ci.org/
-language: python
-
-python:
-  - 2.7
-  - 3.5
+language: generic
 
 sudo: false
 
@@ -17,8 +13,11 @@ cache:
 
 addons:
     packages:
-      - gfortran-4.9
+      - gfortran-6
       - python-pip
+
+before_install:
+    git submodule update --init --recursive
 
 install:
   - |
@@ -26,16 +25,20 @@ install:
       mkdir "$HOME/.local/bin"
     fi
   - export PATH="$HOME/.local/bin:$PATH"
-  - export FC=/usr/bin/gfortran-4.9
-  - ln -fs /usr/bin/gfortran-4.9 "$HOME/.local/bin/gfortran" && gfortran --version
-  - ls -l /usr/bin/gfortran-4.9
-  - ln -fs /usr/bin/gcov-4.9 "$HOME/.local/bin/gcov" && gcov --version
-  - |
-    if ! which f90split; then
-      wget http://people.sc.fsu.edu/~jburkardt/f_src/f90split/f90split.f90 && \
-      gfortran -o f90split f90split.f90 && \
-      mv f90split "$HOME/.local/bin/" && \
-      rm f90split.f90
-    fi
-  - pip install --upgrade numpy
-  - pip install --upgrade pandas
+  - export FC=/usr/bin/gfortran-6
+  - ln -fs /usr/bin/gfortran-6 "$HOME/.local/bin/gfortran" && gfortran --version
+  - ls -l /usr/bin/gfortran-6
+  # - ln -fs /usr/bin/gcov-6 "$HOME/.local/bin/gcov" && gcov --version
+  # - |
+  #   if ! which f90split; then
+  #     wget http://people.sc.fsu.edu/~jburkardt/f_src/f90split/f90split.f90 && \
+  #     gfortran -o f90split f90split.f90 && \
+  #     mv f90split "$HOME/.local/bin/" && \
+  #     rm f90split.f90
+  #   fi
+  # - pip install --upgrade numpy
+  # - pip install --upgrade pandas
+
+script:
+    - make clean && make FC='mpifort'
+    - make clean && make FC='gfortran-6'
