--- a/setup.cfg
+++ b/setup.cfg
@@ -3,5 +3,5 @@ VCS = git
 style = pep440
 versionfile_source = wlcsim/_version.py
 versionfile_build = wlcsim/_version.py
-tag_prefix=''
-parentdir_prefix='BasicWLC-'
+tag_prefix='wlcsim-'
+parentdir_prefix='wlcsim-'
