--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,5 +3,5 @@ black
 pytest
 sphinx
 sphinx-rtd-theme
--e git+https://github.com/VACUMM/sphinx-fortran.git
+-e git+https://github.com/VACUMM/sphinx-fortran.git#egg=sphinx-fortran
 
