first commit and trying to implement discretized linkers. first testing effect on number of beads on RMS and other stats... maybe tanget vector from nucleosome if that is actually relevant in coordinates and not just included in hamiltonians.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ tags
 .*.sw*
 .DS_Store
 *.mod
+vizualization2/*
 vizualization/xyz/*
 vizualization/pdb/*
 vizualization/pdb0/*
@@ -26,6 +27,7 @@ doc/_build
 *.toc
 *.out
 *.aux
+*.pdb
 input/params
 input/*loops*txt
 stdout.txt
