--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,6 +3,8 @@ black
 pytest
 sphinx
 sphinx-rtd-theme
+nbsphinx
+ipykernel
 ipython
 -e git+https://github.com/VACUMM/sphinx-fortran.git#egg=sphinx-fortran
 
